--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Система учета доноров крови</title>
-    <link rel="stylesheet" href="main_styles.css">
-    <link rel="stylesheet" href="list_styles.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/main_styles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/list_styles.css')}}">
 </head>
 <body>
     <div class="header">
@@ -25,7 +25,6 @@
           cursor: pointer;
         }
       </style>
-      
       <script>
       function showLogoutButton() {
         document.querySelector(".exit-button").style.display = "block";
@@ -40,39 +39,40 @@
       }
       </script>
     <div class="search-container">
-        <table>
-            <tr>
-                <td><label for="surname">Фамилия:</label></td>
-                <td><input type="text" id="surname" name="surname" size="15"></td>
-                <td><label for="street">Улица:</label></td>
-                <td><input type="text" id="street" name="street" size="15"></td>
-                <td><label for="series">Серия полиса:</label></td>
-                <td><input type="text" id="series" name="series" size="15"></td>
-            </tr>
-            <tr>
-                <td><label for="name">Имя:</label></td>
-                <td><input type="text" id="name" name="name" size="15"></td>
-                <td><label for="house">Дом:</label></td>
-                <td><input type="text" id="house" name="house" size="15"></td>
-                <td><label for="ambulatory_card_number">Амб.карта:</label></td>
-                <td><input type="text" id="ambulatory_card_number" name="ambulatory_card_number" size="15"></td>
-            </tr>
-            <tr>
-                <td><label for="patronymic">Отчество:</label></td>
-                <td><input type="text" id="patronymic" name="patronymic" size="15"></td>
-                <td><label for="blood_bank_registration_number">СНИЛС:</label></td>
-                <td><input type="text" id="blood_bank_registration_number" name="blood_bank_registration_number" size="15"></td>
-                <td><label for="birth_date">Д/Р:</label></td>
-                <td><input type="date" id="birth_date" name="birth_date" size="15"></td>
-            </tr>
-            <tr>
-                <td colspan="6" style="text-align: right;">
-                    <button type="reset">Очистить</button>
-                    <div style="display: inline-block; width: 10px;"></div>
-                    <button type="submit" onclick="searchDonors()">Найти</button>
-                </td>
-            </tr>
-        </table>
+        <form action="/search" method="post">
+            <table>
+                <tr>
+                    <th><label for="surname">Фамилия:</label></th>
+                    <td><input type="text" id="surname" name="surname" required></td>
+                    <th><label for="street">Улица:</label></th>
+                    <td><input type="text" id="street" name="street" required></td>
+                    <th><label for="blood">Группа крови:</label></th>
+                    <td><input type="text" id="blood" name="blood" required></td>
+                </tr>
+                <tr>
+                    <th><label for="name">Имя:</label></th>
+                    <td><input type="text" id="name" name="name" required></td>
+                    <th><label for="house">Дом:</label></th>
+                    <td><input type="text" id="house" name="house" required></td>
+                    <th><label for="rh">Резус Фактор:</label></th>
+                    <td><input type="text" id="rh" name="rh" required></td>
+                </tr>
+                <tr>
+                    <th><label for="patronymic">Отчество:</label></th>
+                    <td><input type="text" id="patronymic" name="patronymic" required></td>
+                    <th><label for="blood_bank_registration_number">СНИЛС:</label></th>
+                    <td><input type="text" id="blood_bank_registration_number" name="blood_bank_registration_number" required></td>
+                    <th><label for="birth_date">Д/Р:</label></th>
+                    <td><input type="date" id="birth_date" name="birth_date" required></td>
+                </tr>
+                <tr>
+                    <td colspan="6" style="text-align: right;">
+                        <button type="reset">Очистить</button>
+                        <button type="submit">Найти</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
     </div>
     
     <div class="action-buttons">
@@ -125,8 +125,8 @@
     </div>
 
 <div class="footer" style="position: fixed; bottom: 0; width: 100%;">
-    <span>Разработка и поддержка - ООО "DONOR MIRROR"</span>    
-</div>    
+    <span>Разработка и поддержка - ООО "DONOR MIRROR"</span>   
+</div>   
 
 <script src="scripts.js"></script>
 </body>
