--- a/app/static/css/main_styles.css
+++ b/app/static/css/main_styles.css
@@ -1,5 +1,8 @@
-
 /* general styles */
+html, body {
+    text-align: justify;
+    font-family: 'Playfair Display SC', serif;
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -13,38 +16,54 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Trebuchet MS', sans-serif;
     margin: 10px 0;
 }
-
 h1 {
     font-size: 36px;
+    color: #3498db;
 }
-
 h2 {
     font-size: 28px;
+    color: #3498db;
 }
-
 h3 {
     font-size: 24px;
+    color: #3498db;
 }
-
 h4 {
     font-size: 20px;
+    color: #3498db;
 }
-
 h5 {
     font-size: 18px;
+    color: #3498db;
 }
-
 h6 {
     font-size: 16px;
+    color: #3498db;
 }
-
 p {
     margin-bottom: 15px;
 }
-
 ul, ol {
     margin-top: 10px;
     margin-bottom: 15px;
+}
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+ol {
+    list-style-type: decimal;
+    padding-left: 20px;
+}
+li {
+    margin-bottom: 10px;
+}
+a {
+    color: #3498db;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
 }
 
 /* layout styles */
@@ -65,6 +84,8 @@ ul, ol {
     padding: 10px 0;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .header h1 {
@@ -94,17 +115,31 @@ ul, ol {
     padding: 15px 0;
 }
 
-.footer {
+
+/* обработка <footer> */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #2c3e50;
     color: white;
     text-align: center;
-    padding: 10px 0;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    padding: 0px 5px;
+}
+
+footer .footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+footer .footer-container span {
+    margin-bottom: 10px;
 }
 
 /* form styles */
-
 form {
     display: flex;
     flex-direction: column;
