add BootStrap and some fix

--- a/app/templates/main/main.html
+++ b/app/templates/main/main.html
@@ -2,125 +2,141 @@
 {% block title %} BloodDonorRegistration {% endblock %}
 
 {% block header %}
-<header>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-</header>
-<div class="header">
-    <div class="header-container">
-        <div class="header-logo">
-            <h1>Учет доноров крови</h1>
-        </div>
-        <div style="display: inline-flex; align-items: center;">
-            <div class="header-contacts" style="background-color: rgba(0, 51, 75, 0.4); padding: 10px; margin-right: 10px;">
-                <p>Адрес: г. Москва, уl. Ленина, d.15</p>
-                <p>Телефон: 8(800)123-45-67</p>
-                <p>Email: <a href="mailto:hello@donormirror.ru" style="display: inline;">hello@donormirror.ru</a></p>
-                <p>ВК: <a href="https://vk.com/tenebrisvk" style="display: inline;">autor</a></p>
+    <header>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    </header>
+    <div class="header">
+        <div class="header-container">
+            <div class="header-logo">
+                <h1>Учет доноров крови</h1>
             </div>
-
-            <div style="display: flex; align-items: center; justify-content: center; transform: translateY(-19%);">
-                <div class="header-button" style="margin-right: 10px"> 
-                    <button onclick="redirectToLoginPage()">Войти</button> 
+            <div style="display: inline-flex; align-items: center;">
+                <div class="header-contacts"
+                     style="background-color: rgba(0, 51, 75, 0.4); padding: 10px; margin-right: 10px;">
+                    <p>Адрес: г. Москва, уl. Ленина, d.15</p>
+                    <p>Телефон: 8(800)123-45-67</p>
+                    <p>Email: <a href="mailto:hello@donormirror.ru" style="display: inline;">hello@donormirror.ru</a>
+                    </p>
+                    <p>ВК: <a href="https://vk.com/tenebrisvk" style="display: inline;">autor</a></p>
                 </div>
-                
-                <script>
-                    function redirectToLoginPage() {
-                        window.location.href = '/login';
-                    }
-                </script>
+
+                <div style="display: flex; align-items: center; justify-content: center; transform: translateY(-19%);">
+                    <div class="header-button" style="margin-right: 10px">
+                        <button onclick="redirectToLoginPage()">Войти</button>
+                    </div>
+
+                    <script>
+                        function redirectToLoginPage() {
+                            window.location.href = '/login';
+                        }
+                    </script>
+                </div>
             </div>
-        </div>    
+        </div>
     </div>
-</div>
 {% endblock %}
 
 {% block content %}
-<div class="container"> 
-    <div class="video-container">
-        <video loop muted autoplay class="fullscreen-bg__video">
-            <source src="{{ url_for('static', filename='doctors.mp4') }}" type="video/mp4">
-        </video>
-    </div> 
-    <div class="content-container">
-        <div class="content" style="overflow-y: scroll; height: 100vh;">
-            <h1>DonorMirror</h1>
-            <p>Open source & easy-to-use blood donor information system(HIS) for all healthcare organisations.</p>
+    <div class="container">
+        <div class="video-container">
+            <video loop muted autoplay class="fullscreen-bg__video">
+                <source src="{{ url_for('static', filename='doctors.mp4') }}" type="video/mp4">
+            </video>
+        </div>
+        <div class="content-container">
+            <div class="content" style="overflow-y: scroll; height: 100vh;">
+                <h1>DonorMirror</h1>
+                <p>Open source & easy-to-use blood donor information system(HIS) for all healthcare organisations.</p>
 
-            <h2>Предметная область</h2>
-            <p>Исследование и разработка информационной системы учета доноров крови.</p>
+                <h2>Предметная область</h2>
+                <p>Исследование и разработка информационной системы учета доноров крови.</p>
 
-            <h2>Описание</h2>
-            <p>Информационная система учета доноров крови - это программное приложение, предназначенное для оптимизации процессов сбора, хранения и распределения крови. Система позволяет регистрировать новых доноров, отслеживать их медицинскую историю, сроки донорства и другую важную информацию. Она также предоставляет инструменты для анализа данных, создания отчетов и интеграции с другими медицинскими информационными системами.</p>
+                <h2>Описание</h2>
+                <p>Информационная система учета доноров крови - это программное приложение, предназначенное для
+                    оптимизации процессов сбора, хранения и распределения крови. Система позволяет регистрировать новых
+                    доноров, отслеживать их медицинскую историю, сроки донорства и другую важную информацию. Она также
+                    предоставляет инструменты для анализа данных, создания отчетов и интеграции с другими медицинскими
+                    информационными системами.</p>
 
-            <h2>Особенности</h2>
-            <ul>
-                <li>Регистрация и управление данными о донорах</li>
-                <li>Отслеживание медицинской истории и сроков донорства</li>
-                <li>Расширенные возможности анализа данных</li>
-                <li>Создание отчетов и визуализация данных</li>
-                <li>Удобная интеграция с другими системами</li>
-                <li>Высокий уровень безопасности</li>
-            </ul>
-            <h2>Актуальность</h2> 
-            <p>В современном мире потребность в донорской крови остается крайне высокой. Эффективная система учета доноров крови необходима для обеспечения медицинских учреждений необходимой информацией о наличии доноров и их группе крови. Это позволит улучшить процессы сбора, хранения и распределения крови.</p> 
- 
-            <h2>Область использования</h2> 
-            <ul> 
-                <li>В медицинских учреждениях</li> 
-                <li>Центрах крови</li> 
-                <li>Больницах</li> 
-                <li>Организациях, занимающихся благотворительной деятельностью в сфере здравоохранения</li> 
-            </ul> 
- 
-            <h2>Анализ актуальности</h2> 
-            <p>Для анализа актуальности и выбора аналогов информационной системы учета доноров крови необходимо рассмотреть следующие аспекты:</p> 
-            <ul> 
-                <li>Функциональность: возможности системы по учету доноров, группировке крови, отслеживанию медицинских показателей.</li> 
-                <li>Безопасность: защита конфиденциальности данных доноров, обеспечение безопасности информации.</li> 
-                <li>Удобство использования: интуитивно понятный интерфейс, простота взаимодействия с системой.</li> 
-            </ul> 
- 
-            <h2>Аналоги</h2> 
-            <p>Проведен анализ существующих систем учета доноров крови, выявлены их преимущества и недостатки.</p> 
- 
-            <h2>Заключение</h2> 
-            <p>Разработка приложения на основе исследования информационной системы учета доноров крови может быть широко применена в различных сферах для оптимизации работы с донорами крови и повышения эффективности процесса донорства.</p> 
- 
-            <h2>Архитектура</h2> 
-            <ul> 
-                <li>Фронтенд: веб-приложение с удобным интерфейсом</li> 
-                <li>Бэкенд: сервер на Python (Flask)</li> 
-                <li>База данных: SQL Server</li> 
-                <li>Аналитика: библиотека Pandas</li> 
-                <li>Интеграция: REST API</li> 
-            </ul> 
- 
-            <h2>Структура</h2> 
-            <ul> 
-                <li>Главный компонент (управление системой)</li> 
-                <li>Компоненты учета доноров (регистрация, хранение и управление данными)</li> 
-                <li>Компоненты аналитики данных (инструменты для анализа и визуализации)</li> 
-                <li>Компоненты базы данных (логика работы с SQL Server)</li> 
-            </ul> 
- 
-            <h2>Требования</h2> 
-            <ul> 
-                <li>Веб-сервер (например, Apache или Nginx)</li> 
-                <li>Python 3.x</li> 
-                <li>Flask</li> 
-                <li>SQL Server</li> 
-                <li>Библиотека Pandas</li> 
-            </ul> 
-        </div> 
-    </div>
+                <h2>Особенности</h2>
+                <ul>
+                    <li>Регистрация и управление данными о донорах</li>
+                    <li>Отслеживание медицинской истории и сроков донорства</li>
+                    <li>Расширенные возможности анализа данных</li>
+                    <li>Создание отчетов и визуализация данных</li>
+                    <li>Удобная интеграция с другими системами</li>
+                    <li>Высокий уровень безопасности</li>
+                </ul>
+                <h2>Актуальность</h2>
+                <p>В современном мире потребность в донорской крови остается крайне высокой. Эффективная система учета
+                    доноров крови необходима для обеспечения медицинских учреждений необходимой информацией о наличии
+                    доноров и их группе крови. Это позволит улучшить процессы сбора, хранения и распределения крови.</p>
+
+                <h2>Область использования</h2>
+                <ul>
+                    <li>В медицинских учреждениях</li>
+                    <li>Центрах крови</li>
+                    <li>Больницах</li>
+                    <li>Организациях, занимающихся благотворительной деятельностью в сфере здравоохранения</li>
+                </ul>
+
+                <h2>Анализ актуальности</h2>
+                <p>Для анализа актуальности и выбора аналогов информационной системы учета доноров крови необходимо
+                    рассмотреть следующие аспекты:</p>
+                <ul>
+                    <li>Функциональность: возможности системы по учету доноров, группировке крови, отслеживанию
+                        медицинских показателей.
+                    </li>
+                    <li>Безопасность: защита конфиденциальности данных доноров, обеспечение безопасности информации.
+                    </li>
+                    <li>Удобство использования: интуитивно понятный интерфейс, простота взаимодействия с системой.</li>
+                </ul>
+
+                <h2>Аналоги</h2>
+                <p>Проведен анализ существующих систем учета доноров крови, выявлены их преимущества и недостатки.</p>
+
+                <h2>Заключение</h2>
+                <p>Разработка приложения на основе исследования информационной системы учета доноров крови может быть
+                    широко применена в различных сферах для оптимизации работы с донорами крови и повышения
+                    эффективности процесса донорства.</p>
+
+                <h2>Архитектура</h2>
+                <ul>
+                    <li>Фронтенд: веб-приложение с удобным интерфейсом</li>
+                    <li>Бэкенд: сервер на Python (Flask)</li>
+                    <li>База данных: SQL Server</li>
+                    <li>Аналитика: библиотека Pandas</li>
+                    <li>Интеграция: REST API</li>
+                </ul>
+
+                <h2>Структура</h2>
+                <ul>
+                    <li>Главный компонент (управление системой)</li>
+                    <li>Компоненты учета доноров (регистрация, хранение и управление данными)</li>
+                    <li>Компоненты аналитики данных (инструменты для анализа и визуализации)</li>
+                    <li>Компоненты базы данных (логика работы с SQL Server)</li>
+                </ul>
+
+                <h2>Требования</h2>
+                <ul>
+                    <li>Веб-сервер (например, Apache или Nginx)</li>
+                    <li>Python 3.x</li>
+                    <li>Flask</li>
+                    <li>SQL Server</li>
+                    <li>Библиотека Pandas</li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
+    </div>
+    </div>
 {% endblock %}
 
 {% block footer %}
-<footer>
-    <div class="footer-container">
-        <span>Разработка и поддержка - ООО "DONOR MIRROR"</span>    
-</footer>
+    <footer>
+        <div class="footer-container">
+            <span>Разработка и поддержка - ООО "DONOR MIRROR"</span>
+        </div>
+    </footer>
 {% endblock %}
