--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -83,13 +83,10 @@
 /* Container styles */
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 81.3vh;
+    height: 100vh;
     width: 100vw;
     max-width: 80%;
-    margin: 5 auto;
+    margin: 5px auto;
     position: relative;
     overflow: hidden;
     transition: all 0.3s ease;
