--- a/app/templates/main/login.html
+++ b/app/templates/main/login.html
@@ -6,6 +6,7 @@
 
 {% block header %}
 <header>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 </header>
 <div class="header">   
