Creating all pages

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -14,7 +14,7 @@
           <div class="name" onfocus="showLogoutButton()">
             Иванов И.И.
           </div>
-          <div class="exit-button" style="display: none" onmouseenter="showLogoutButton()" onmouseleave="hideLogoutButton()" onclick="logout()">Выход</div>
+          <div class="exit-button" style="display: none" onmouseenter="showLogoutButton()" onmouseleave="hideLogoutButton()" onclick="location.href='/login'">Выход</div>
         </div>
       </div>
       <style>
@@ -124,7 +124,7 @@
         <input type="file" id="file" onchange="uploadCSV()">
     </div>
 
-<div class="footer" style="position: fixed; bottom: 0; width: 100%;">
+<div class="footer">
     <span>Разработка и поддержка - ООО "DONOR MIRROR"</span>   
 </div>   
 
