--- a/app/templates/main/login.html
+++ b/app/templates/main/login.html
@@ -26,7 +26,7 @@
 
       <button type="submit" id="login-button">Войти</button>    
 
-      <a href="/forgot_password" id="forgot-password-link">Забыли пароль?</a>   
+      <a href="/login/forgot" id="forgot-password-link">Забыли пароль?</a> 
       <input type="hidden" name="csrf_token" value="{{csrf_token}}"> 
     </form> 
   </div> 
