--- a/app/static/css/list_styles.css
+++ b/app/static/css/list_styles.css
@@ -208,3 +208,18 @@ html, body {
     }
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.footer span {
+    margin-bottom: 10px;
+    text-align: center;
+}
