--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -68,12 +68,27 @@ input[type="text"], input[type="password"] {
     border: none;   
     border-radius: 5px;   
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);   
-    transition: all 0.3s ease;   
+    transition: all 0.1s ease;   
 }
 
 input[type="text"]:focus, input[type="password"]:focus {   
     outline: none;   
     box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);   
+}
+
+input[type="email"], input[type="email"] {   
+    width: 92%;   
+    padding: 15px;   
+    margin-bottom: 15px;   
+    border: none;   
+    border-radius: 5px;   
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);   
+    transition: all 0.1s ease;   
+}
+
+input[type="email"]:focus, input[type="email"]:focus {
+    outline: none;   
+    box-shadow: 0 0 5px rgba(52, 152, 219, 0.5); 
 }
 
 button {   
