--- a/app/static/css/list_styles.css
+++ b/app/static/css/list_styles.css
@@ -229,3 +229,61 @@ html, body {
     margin-bottom: 10px;
     text-align: center;
 }
+
+.modal-edit, .modal-add {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    backdrop-filter: blur(10px);
+}
+
+.modal-edit-content, .modal-add-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.close:hover {
+    color: black;
+    transform: scale(1.2);
+}
+
+.modal-edit-action-buttons, .modal-add-action-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
+
+.modal-edit-action-buttons button, .modal-add-action-buttons button {
+    padding: 10px 20px;
+    background-color: #2980b9;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.modal-edit-action-buttons button:hover, .modal-add-action-buttons button:hover {
+    background-color: #2980b9;
+    transform: scale(1.1);
+}
