--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -59,11 +59,141 @@
 </div>
 
 <div class="action-buttons">
-    <button onclick="addDonor()">Записать</button>
-    <button onclick="editDonor()">Добавить</button>
-    <button onclick="editDonor()">Редактировать данные</button>
+    <button onclick="addDonorModal()">Записать</button>
+    <button onclick="openModal()">Редактировать данные</button>
     <button onclick="requestBlood()">Запросить кровь</button>
 </div>
+
+<!-- Модальное окно для добавления нового донора -->
+<div id="addDonorModal" class="modal-add">
+    <div class="modal-add-content">
+        <span class="close" onclick="closeAddModal()">&times;</span>
+        <form id="addDonorForm">
+            <table>
+                <tr>
+                    <th><label for="addDonorFirstName">Имя:</label></th>
+                    <td><input type="text" id="addDonorFirstName" name="addDonorFirstName" required></td>
+                    <th><label for="addDonorLastName">Фамилия:</label></th>
+                    <td><input type="text" id="addDonorLastName" name="addDonorLastName" required></td>
+                    <th><label for="addDonorMiddleName">Отчество:</label></th>
+                    <td><input type="text" id="addDonorMiddleName" name="addDonorMiddleName"></td>
+                </tr>
+                <tr>
+                    <th><label for="addDonorDateOfBirth">Д/Р:</label></th>
+                    <td><input type="date" id="addDonorDateOfBirth" name="addDonorDateOfBirth" required></td>
+                    <th><label for="addDonorGender">Пол:</label></th>
+                    <td><select id="addDonorGender" name="addDonorGender" required>
+                            <option value="Мужской">Мужской</option>
+                            <option value="Женский">Женский</option>
+                        </select></td>
+                    <th><label for="addDonorAddress">Адрес:</label></th>
+                    <td><input type="text" id="addDonorAddress" name="addDonorAddress"></td>
+                </tr>
+                <tr>
+                    <th><label for="addDonorPhoneNumber">Телефон:</label></th>
+                    <td><input type="text" id="addDonorPhoneNumber" name="addDonorPhoneNumber"></td>
+                    <th><label for="addDonorHospitalAffiliation">Прикрепление:</label></th>
+                    <td><input type="text" id="addDonorHospitalAffiliation" name="addDonorHospitalAffiliation"></td>
+                    <th><label for="addDonorPassportData">Паспорт:</label></th>
+                    <td><input type="text" id="addDonorPassportData" name="addDonorPassportData"></td>
+                </tr>
+                <tr>
+                    <th><label for="addDonorInsuranceData">Страховка:</label></th>
+                    <td><input type="text" id="addDonorInsuranceData" name="addDonorInsuranceData"></td>
+                    <th><label for="addDonorBloodType">Группа крови:</label></th>
+                    <td><input type="text" id="addDonorBloodType" name="addDonorBloodType" required></td>
+                    <th><label for="addDonorRhFactor">Резус-фактор:</label></th>
+                    <td><input type="text" id="addDonorRhFactor" name="addDonorRhFactor" required></td>
+                </tr>
+            </table>
+            <div class="modal-add-action-buttons">
+                <button type="submit">Записать</button>
+            </div>
+        </form>
+    </div>
+</div>
+<script>
+// Открывает модальное окно
+function addDonorModal() {
+    document.getElementById('addDonorModal').style.display = 'block';
+}
+
+// Закрывает модальное окно
+function closeAddModal() {
+    document.getElementById('addDonorModal').style.display = 'none';
+}
+
+document.getElementById('addDonorForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    // Добавьте ваш код для обработки добавления нового донора здесь
+});
+</script>
+
+<!-- Модальное окно для редактирования данных донора -->
+<div id="editDonorModal" class="modal-edit">
+    <div class="modal-edit-content">
+        <span class="close" onclick="closeEditModal()">&times;</span>
+        <form id="editDonorForm">
+            <table>
+                <tr>
+                    <th><label for="editDonorFirstName">Имя:</label></th>
+                    <td><input type="text" id="editDonorFirstName" name="editDonorFirstName" required></td>
+                    <th><label for="editDonorLastName">Фамилия:</label></th>
+                    <td><input type="text" id="editDonorLastName" name="editDonorLastName" required></td>
+                    <th><label for="editDonorMiddleName">Отчество:</label></th>
+                    <td><input type="text" id="editDonorMiddleName" name="editDonorMiddleName"></td>
+                </tr>
+                <tr>
+                    <th><label for="editDonorDateOfBirth">Д/Р:</label></th>
+                    <td><input type="date" id="editDonorDateOfBirth" name="editDonorDateOfBirth" required></td>
+                    <th><label for="editDonorGender">Пол:</label></th>
+                    <td><select id="editDonorGender" name="editDonorGender" required>
+                            <option value="Мужской">Мужской</option>
+                            <option value="Женский">Женский</option>
+                        </select></td>
+                    <th><label for="editDonorAddress">Адрес:</label></th>
+                    <td><input type="text" id="editDonorAddress" name="editDonorAddress"></td>
+                </tr>
+                <tr>
+                    <th><label for="editDonorPhoneNumber">Телефон:</label></th>
+                    <td><input type="text" id="editDonorPhoneNumber" name="editDonorPhoneNumber"></td>
+                    <th><label for="editDonorHospitalAffiliation">Прикрепление:</label></th>
+                    <td><input type="text" id="editDonorHospitalAffiliation" name="editDonorHospitalAffiliation"></td>
+                    <th><label for="editDonorPassportData">Паспорт:</label></th>
+                    <td><input type="text" id="editDonorPassportData" name="editDonorPassportData"></td>
+                </tr>
+                <tr>
+                    <th><label for="editDonorInsuranceData">Страховка:</label></th>
+                    <td><input type="text" id="editDonorInsuranceData" name="editDonorInsuranceData"></td>
+                    <th><label for="editDonorBloodType">Группа крови:</label></th>
+                    <td><input type="text" id="editDonorBloodType" name="editDonorBloodType" required></td>
+                    <th><label for="editDonorRhFactor">Резус-фактор:</label></th>
+                    <td><input type="text" id="editDonorRhFactor" name="editDonorRhFactor" required></td>
+                </tr>
+            </table>
+            <div class="modal-edit-action-buttons">
+                <button type="submit">Редактировать данные</button>
+            </div>
+        </form>
+    </div>
+</div>
+<script>
+// Открывает модальное окно
+function openModal() {
+    document.getElementById('editDonorModal').style.display = 'block';
+}
+
+// Закрывает модальное окно
+function closeEditModal() {
+    document.getElementById('editDonorModal').style.display = 'none';
+}
+
+document.getElementById('editDonorForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    // Добавьте ваш код для обработки редактирования данных здесь
+});
+</script>
+
 
 <table class="donors-list">
     <thead>
