--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -24,27 +24,26 @@
     <form action="/search" method="post">
         <table>
             <tr>
-                <th><label for="surname">Фамилия:</label></th>
-                <td><input type="text" id="surname" name="surname" required></td>
-                <th><label for="street">Улица:</label></th>
-                <td><input type="text" id="street" name="street" required></td>
-                <th><label for="blood">Группа крови:</label></th>
-                <td><input type="text" id="blood" name="blood" required></td>
+                <th><label for="last_name">Фамилия:</label></th>
+                <td><input type="text" id="last_name" name="last_name" required></td>
+                <th><label for="address">Адрес:</label></th>
+                <td><input type="text" id="address" name="address" required></td>
+                <th><label for="blood_type">Группа крови:</label></th>
+                <td><input type="text" id="blood_type" name="blood_type" required></td>
             </tr>
             <tr>
-                <th><label for="name">Имя:</label></th>
-                <td><input type="text" id="name" name="name" required></td>
+                <th><label for="first_name">Имя:</label></th>
+                <td><input type="text" id="first_name" name="first_name" required></td>
                 <th><label for="house">Дом:</label></th>
                 <td><input type="text" id="house" name="house" required></td>
-                <th><label for="rh">Резус Фактор:</label></th>
-                <td><input type="text" id="rh" name="rh" required></td>
+                <th><label for="rh_factor">Резус Фактор:</label></th>
+                <td><input type="text" id="rh_factor" name="rh_factor" required></td>
             </tr>
             <tr>
-                <th><label for="patronymic">Отчество:</label></th>
-                <td><input type="text" id="patronymic" name="patronymic" required></td>
-                <th><label for="blood_bank_registration_number">СНИЛС:</label></th>
-                <td><input type="text" id="blood_bank_registration_number" name="blood_bank_registration_number"
-                           required></td>
+                <th><label for="middle_name">Отчество:</label></th>
+                <td><input type="text" id="middle_name" name="middle_name" required></td>
+                <th><label for="snils">СНИЛС:</label></th>
+                <td><input type="text" id="snils" name="snils" required></td>
                 <th><label for="birth_date">Д/Р:</label></th>
                 <td><input type="date" id="birth_date" name="birth_date" required></td>
             </tr>
