--- a/app/static/css/list_styles.css
+++ b/app/static/css/list_styles.css
@@ -127,7 +127,7 @@ html, body {
 .save-load-buttons {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
     grid-column: 1 / -1;
     gap: 10px;
 }
@@ -180,18 +180,6 @@ html, body {
     background-color: #f5f5f5;
 }
 
-.donors-list tr:nth-child(even) {
-    background-color: #fff;
-}
-
-.donors-list tr:first-child {
-    background-color: #f5f5f5;
-}
-
-.donors-list tr:last-child {
-    background-color: #f5f5f5;
-}
-
 @media (min-width: 900px) {
     .header {
         border-radius: 10px 0 0 10px;
@@ -222,7 +210,7 @@ html, body {
     background-color: #2c3e50;
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .footer span {
@@ -286,4 +274,9 @@ html, body {
 .modal-edit-action-buttons button:hover, .modal-add-action-buttons button:hover {
     background-color: #2980b9;
     transform: scale(1.1);
+}
+
+
+.selected {
+    background-color: #2980b9; 
 }
